# cbs-backend

./: .gitignore  Cargo.toml  test.rest
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
migrations/: 0001_init.sql  0002_add_indexes.sql
spec/: api.md  instruction.md  postman.json
specs/: instruction.md
specs/001-admin-api-sqlite/: SECURITY_REVIEW.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-admin-api-sqlite/checklists/: requirements.md
src/: lib.rs  main.rs
src/api/: auth.rs  goods.rs  menu_tree.rs  metrics.rs  mod.rs  router.rs  story.rs  system.rs
src/auth/: mod.rs
src/domain/: error.rs  goods.rs  mod.rs  story.rs  system.rs
src/infra/: db.rs  goods_repo.rs  logging.rs  metrics_repo.rs  mod.rs  state.rs  story_repo.rs  system_repo.rs
src/services/: goods_service.rs  mod.rs  story_service.rs  system_service.rs
tests/common/: mod.rs
tests/integration/: auth_flow.rs  edge_cases.rs  goods_crud.rs  story_metrics.rs  system_crud.rs
tests/unit/: auth_tests.rs  edge_cases_tests.rs  goods_handlers_tests.rs  story_metrics_handlers_tests.rs  system_handlers_tests.rs
