[package]
name = "cbs-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
tower = "0.4"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
tempfile = "3.10"
axum-test = "3.1"
